# pipes

./: Cargo.toml
src/: args.rs  main.rs
src/pipe/: char_set.rs  direction.rs  mod.rs
