# See: https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "pipes"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
crossterm = "0.29.0"
rand = "0.9.2"

[lints.rust]
nonstandard_style = { level = "deny", priority = -1 }
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
similar_names = "allow"
unused_trait_names = "warn"
unwrap_used = "warn"
